My Copycat Challenge

--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
           <div class="line-red"></div>
           <p>Personal details</p> 
         </div>
-        <select class="dropdown-language">
-          <option>English</option>
-          <option>French</option>
-          <option>Dutch</option>
-        </select>
+        <div class="dropdown">
+          <select class="select-box">
+            <option value="1">English</option>
+            <option value="2">French</option>
+            <option value="3">Dutch</option>
+          </select>
+        </div>
       </div>
-
       <!-- form intro -->
       <div class="form-intro">
         <h2>Get started absolutely free</h2>
